# dir-sorter-rs

./: Cargo.toml  README.md
src/: category.rs  main.rs  sort.rs  sort_files.rs
