[package]
name = "dir-sorter"
description = "a eframe gui app to sort any directory"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/usmandevstuff"
repository = "https://github.com/usmandevstuff/dir-sorter-rs"
readme = "README.md"
authors = ["Muhammad Usman <github.com/usmandevstuff>"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
rfd = "0.14.1"

[profile.release]
strip = true 
opt-level = "s"
lto = true
codegen-units = 1